gap fix

--- a/src/main.css
+++ b/src/main.css
@@ -93,7 +93,7 @@ input::placeholder {
     grid-row: 2;
     padding: 1rem;
     display: flex;
-    gap: 1rem;
+    gap: 0.5rem;
     border-top: 0.25px solid var(--secondary-colour);
 }
 
